Backport quantum computer menu records to Java 8 classes